'minecraft:...' tabcomplete support